<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListaEventos.TransformFragment">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="207dp"
        android:layout_height="186dp"
        android:contentDescription="@string/no_existen_eventos_creados"
        android:src="@drawable/baseline_event_busy_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerviewTransform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerviewTransform"
        app:layout_constraintVertical_bias="0.438" />

    <TextView
        android:id="@+id/tvprecaucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/precaucion_msg"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerviewTransform"
        app:layout_constraintEnd_toEndOf="@+id/imagen"
        app:layout_constraintStart_toStartOf="@+id/imagen"
        app:layout_constraintTop_toBottomOf="@+id/imagen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_results"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerviewTransform"
        app:layout_constraintVertical_bias="0.049" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewTransform"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svSearchs" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svSearchs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Busca lo que quieras..." />

</androidx.constraintlayout.widget.ConstraintLayout>
